<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>EditEntryDriver</class>
 <widget class="QDialog" name="EditEntryDriver">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>404</width>
    <height>294</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="2" column="0">
      <widget class="QLabel" name="driverDocumentLabel">
       <property name="text">
        <string>Номер документа водителя:</string>
       </property>
      </widget>
     </item>
     <item row="2" column="1">
      <widget class="QLineEdit" name="driverDocumentEdit"/>
     </item>
     <item row="0" column="1">
      <widget class="QLineEdit" name="firstLastEdit"/>
     </item>
     <item row="3" column="0">
      <widget class="QLabel" name="categoryLabel">
       <property name="text">
        <string>Категория:</string>
       </property>
      </widget>
     </item>
     <item row="3" column="1">
      <widget class="QLineEdit" name="categoryEdit"/>
     </item>
     <item row="1" column="1">
      <widget class="QLineEdit" name="passportNumEdit"/>
     </item>
     <item row="0" column="0">
      <widget class="QLabel" name="firstLastLabel">
       <property name="text">
        <string>Имя, фамилия:</string>
       </property>
      </widget>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="passportNumLabel">
       <property name="text">
        <string>Номер паспорта:</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>EditEntryDriver</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>248</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>EditEntryDriver</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>316</x>
     <y>260</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
